--- a/style.css
+++ b/style.css
@@ -1,6 +1,19 @@
 *{
     box-sizing: border-box;
 }
+
+.time{
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.678);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    height: 20px;
+    width: 46px;
+    font-size: 20px;
+    margin: 0;
+    margin-left: 500px;
+}
 body{
     background-color: gray;
     background-image: linear-gradient(315deg, red 0%, orange 100%);
