Minor css and timer update
Fixed timer duration, adjusted css styling

--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
     margin: 5rem;
 }
 .startbtn{
-    margin: 45px;
+    margin-bottom: -45px;
+    margin-top: 35px;
     margin-left: -10px;
 }
 .welcome{
